// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Support clearTicketForm should clear ticket form 1`] = `
Object {
  "type": "RESET_TICKET_FORM",
}
`;

exports[`Action Creator: Support createTicket should create a ticket 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "issue_type": "billing",
      "message": "mess",
      "subject": "sub",
    },
    "method": "POST",
    "url": "/integrations/support/ticket",
  },
  "type": "CREATE_TICKET",
}
`;

exports[`Action Creator: Support openSupportTicketForm should open support panel 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "payload": Object {
          "view": "ticket",
        },
        "type": "OPEN_SUPPORT_PANEL",
      },
    ],
  ],
}
`;

exports[`Action Creator: Support toggleSupportPanel should toggle panel 1`] = `
Object {
  "type": "TOGGLE_SUPPORT_PANEL",
}
`;

exports[`Action Creator: Support toggleTicketForm should toggle ticket form 1`] = `
Object {
  "type": "TOGGLE_TICKET_FORM",
}
`;
